--- a/css/style.css
+++ b/css/style.css
@@ -39,19 +39,21 @@ header a{
    text-align: center;
    text-decoration: none;
    font-size: 1.5rem;
+   white-space: nowrap;
    color: #fff;
    display: flex;
    border-radius:6%;
    border: 2px solid #f5f5f5;
    flex-direction:row;
    justify-content:center;
-   width : 15%;
+   align-items: center;
+   width : 200px;
    cursor: pointer;
    transition: border .3s;
    transition: all 0.3s ease-in-out;
 }
 header a i{
-   vertical-align: baseline;
+   align-self: flex-start;
    margin-left: 5%;
    margin-bottom: 5%;
 }
@@ -196,9 +198,7 @@ footer .copy{
       font-size: 1.5rem;
    }
    header a{
-      width : 40%;
-      align-items: center;
-     
+      width : 200px;
       padding : .2rem .5rem;
    }
    main {
