--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
    box-sizing: border-box;
 }
 body{
-   background: rgb(1, 191, 189)
+   /* background: rgb(1, 191, 189) */
+   background: #e0e0e0;
 }  
 header{
    padding-top: 10%;
@@ -62,7 +63,6 @@ header a:hover{
 }
 
 main{
-   background: #f3f3f3;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
@@ -83,7 +83,6 @@ main .sobre{
    flex-wrap: wrap;
    justify-content:center;
    flex-direction: row;
-   background: #e0e0e0;
    align-items:center;
    color : #3c3f43;
    padding: 1% 5%;
@@ -103,6 +102,17 @@ main .sobre img{
    border-radius: 50%;
    align-self: center;
    margin-right: 5%;
+}
+.allproject{
+   display: flex;
+   width: 100%;
+   flex-direction: row;
+   margin: 0 2%;
+   border-radius: 10px;
+   flex-wrap: wrap;
+   align-items: center;
+   justify-content: space-around;
+   background-color: #f3f3f3;
 }
 .projetos{
    display: block;
@@ -142,7 +152,7 @@ main .sobre img{
    background: #6558f5;
 }
 .btnprojetos a:first-child:hover, .btnprojetos a:last-child:hover{
-   filter: brightness(.4);
+   filter: brightness(.7);
 }
 footer{
    width: 100%;
@@ -183,7 +193,7 @@ footer .copy{
    color: #3c3f43;
    font-size: 1rem;
    margin-bottom: 5%;
-   transition: color .5s
+   transition: color .2s
 }
 .copy a:hover{
    color: #000;
