--- a/css/style.css
+++ b/css/style.css
@@ -108,27 +108,30 @@ main .about img{
    width: 100%;
    flex-direction: row;
    margin: 0 2%;
+   padding: 1%;
    border-radius: 10px;
    flex-wrap: wrap;
    align-items: center;
-   justify-content: space-around;
+   justify-content: center;
+   gap: 20px;
    background-color: #f3f3f3;
 }
-.projects{
+.project{
    display: block;
    padding : 1%;
-   width: 30%;
-   margin : 2% 0;
+   width: 350px;
+   margin : 0;
    border-radius: 6%;
    box-shadow: 0px 2px 2px 0px #3c3f43;
    background-color: #fff;
    text-align: center;
 }
-.projects img{
+.project img{
    width : 100%;
    margin-bottom: 5%;
+   width: -webkit-fill-available;
 }
-.projects p{
+.project p{
    margin-bottom: 5%;
    text-align: left;
    color: #444;
@@ -139,12 +142,12 @@ main .about img{
    width: 100%;
    justify-content: space-around;
 }
-.projects a{
+.project a{
    text-decoration: none;
    font-size: 1rem;
    color: #fff;
    font-weight: 500;
-   border-radius: 6%;
+   border-radius: 10px;
    padding: 2% 4%;
    background: #1aae9f;
 }
@@ -236,10 +239,12 @@ footer .copy{
    }
    .all-projects{
       margin: 0 1%;
+      flex-direction: row;
    }
    .projects{
       width: 90%;
       margin: 2% 5%;
+      padding: 2%;
    }
    main .projects:last-child{
       margin-bottom: 10%;
