--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,9 @@ header a i{
    margin-left: 5%;
    margin-bottom: 5%;
 }
+header .fa-sort-down:before {
+   vertical-align: text-top;
+}
 header a:hover{
    border : 2px solid #6558f5
 }
